# NN_Snake

./: CMakeLists.txt  README.MD  Snake.sln
Snake/: Apple.cpp  Apple.h  Button.cpp  Button.h  Genotyp.cpp  Genotyp.h  Genotype.cpp  Genotype.h  Matrix.cpp  Matrix.h  Snake.cpp  Snake.h  Snake.vcxproj  Snake.vcxproj.filters  Snake_Teas.hpp  Snake_Test.hpp  Utilities.cpp  Utilities.h  Utilits.cpp  Utilits.h  firstLayer.txt  intercepts_1.txt  intercepts_2.txt  intercepts_3.txt  intercepts_4.txt  intercepts_5.txt  layer_1.txt  layer_2.txt  layer_3.txt  layer_4.txt  layer_5.txt  main.cpp  snaketest.cpp
UML Diagrams/: Activity.vpd  Communication.vpd  Sequence.vpd  State diagram.vpd  Timing Diagram.vpd  Use Case.vpd
